fix: Text alignment

--- a/themes/statusline/assets/sass/components/_single-navigation.scss
+++ b/themes/statusline/assets/sass/components/_single-navigation.scss
@@ -16,7 +16,6 @@
 
 	a {
 		padding: 0 0.5rem;
-		text-align: center;
 		max-width: 50%;
 
 		&:hover {
@@ -27,10 +26,12 @@
 	a.previous {
 		color: $red;
 		align-self: flex-start;
+		text-align: left;
 	}
 
 	a.next {
 		color: $green;
 		align-self: flex-end;
+		text-align: right;
 	}
 }
